[project]
name = "sj_rando"
version = "0.1.1"
dependencies = [
]
requires-python = ">=3.8"
authors = [
  {name = "Niamek"},
  {name = "akerasi" email = "akerasi@gmail.com"},
]
description = "A tool to randomize a Solar Jetman (NES) rom file."
readme = "README.md"
license = {text = "MIT License"}
keywords = ["retro", "nes", "NES", "famicom", "randomizer", "Solar Jetman"]

[project.urls]
Repository = "https://github.com/akerasi/SJ-rando"
Issues = "https://github.com/akerasi/SJ-rando/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include=[
  "*"
]

[tool.hatch.build.targets.wheel]
only-packages = true